Added log controller